# PhoneNumberExtractor

./: logo.py  main.spec  pyproject.toml  watch_and_run.py
phonenumberextractor/: main.py
